--- a/SnipInsight/SnipInsight.csproj
+++ b/SnipInsight/SnipInsight.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
     <ProjectGuid>{2C90CA1B-BD65-41C9-B542-5F1F6E472863}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>SnipInsight</RootNamespace>
