Added shared project for GTK

--- a/SnipInsight.Forms.GTK.Mac/SnipInsight.Forms.GTK.Mac.csproj
+++ b/SnipInsight.Forms.GTK.Mac/SnipInsight.Forms.GTK.Mac.csproj
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\SnipInsight.Forms.GTK\SnipInsight.Forms.GTK.projitems" Label="Shared" Condition="Exists('..\SnipInsight.Forms.GTK\SnipInsight.Forms.GTK.projitems')" />
   <Import Project="..\packages\Xamarin.Forms.3.0.0.482510\build\netstandard2.0\Xamarin.Forms.props" Condition="Exists('..\packages\Xamarin.Forms.3.0.0.482510\build\netstandard2.0\Xamarin.Forms.props')" />
   <PropertyGroup>
     <ProjectGuid>{64CC8953-DD2A-48DD-9E86-6D5DB341523A}</ProjectGuid>
@@ -60,7 +61,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
