--- a/SnipInsight.Forms.GTK.Windows/SnipInsight.Forms.GTK.Windows.csproj
+++ b/SnipInsight.Forms.GTK.Windows/SnipInsight.Forms.GTK.Windows.csproj
@@ -16,6 +16,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
