--- a/SnipInsight.Forms/SnipInsight.Forms/SnipInsight.Forms.csproj
+++ b/SnipInsight.Forms/SnipInsight.Forms/SnipInsight.Forms.csproj
@@ -7,4 +7,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Features\Settings\" />
+    <Folder Include="Features\Library\" />
+    <Folder Include="Features\Insights\" />
+    <Folder Include="Features\Home\" />
+  </ItemGroup>
 </Project>
