--- a/SnipInsight.Forms/SnipInsight.Forms/SnipInsight.Forms.csproj
+++ b/SnipInsight.Forms/SnipInsight.Forms/SnipInsight.Forms.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <StyleCopTreatErrorsAsWarnings>false</StyleCopTreatErrorsAsWarnings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="StyleCop.MSBuild" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
