--- a/SnipInsight.Forms.GTK.Mac/packages.config
+++ b/SnipInsight.Forms.GTK.Mac/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="StyleCop.MSBuild" version="5.0.0" targetFramework="net47" developmentDependency="true" />
   <package id="Xamarin.Forms" version="3.0.0.482510" targetFramework="net47" />
   <package id="Xamarin.Forms.Platform.GTK" version="3.0.0.482510" targetFramework="net47" />
 </packages>
