--- a/SnipInsight.Forms.Mac/packages.config
+++ b/SnipInsight.Forms.Mac/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="StyleCop.MSBuild" version="5.0.0" targetFramework="xamarinmac20" developmentDependency="true" />
   <package id="Xamarin.Forms" version="3.0.0.482510" targetFramework="xamarinmac20" />
 </packages>
